# NovaBank

./: LICENSE  README.md
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clean_rebuild.sh  setup.sh  test_admin.sh  test_auth.sh  test_transactions.sh
backend/docs/: endpoints.md
backend/docs/insomnia/: import_to_insomnia.json  insomnia-overview.md
backend/src/: main.cpp
backend/src/api/account/: account_controller.cpp  account_controller.h  account_serializer.h
backend/src/api/admin/: admin_controller.cpp  admin_controller.h
backend/src/api/shared/: auth_middleware.h  error_response.h
backend/src/api/transaction/: transaction_controller.cpp  transaction_controller.h  transaction_serializer.h
backend/src/api/user/: user_controller.cpp  user_controller.h  user_serializer.h
backend/src/db/: db.cpp  db.h  migrations.sql
backend/src/domain/account/: account.cpp  account.h  account_type.h  account_utils.h
backend/src/domain/transaction/: transaction.cpp  transaction.h  transaction_status.h  transaction_utils.h
backend/src/domain/user/: test.c  user.cpp  user.h  user_type.h  user_utils.h
backend/src/repository/account/: account_repository.cpp  account_repository.h  account_repository_interface.h
backend/src/repository/transaction/: transaction_repository.cpp  transaction_repository.h  transaction_repository_interface.h
backend/src/repository/user/: user_repository.cpp  user_repository.h  user_repository_interface.h
backend/tests/: test_accounts.sh  test_transactions.sh
backend/utils/: build.sh  setup.sh
frontend/: .env.example  .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/config/: routes.config.tsx
frontend/src/presentation/components/common/Feedback/: ErrorAlert.tsx  LoadingBackdrop.tsx  SnackbarProvider.tsx  index.ts
frontend/src/presentation/components/common/Layout/: AppDrawer.tsx  AppHeader.tsx  AppLayout.tsx  NavItems.tsx  index.ts
frontend/src/presentation/contexts/ThemeContext/: index.tsx
frontend/src/presentation/pages/Dashboard/: index.tsx
frontend/src/presentation/pages/NotFound/: index.tsx
frontend/src/presentation/theme/: ThemeProvider.tsx  breakpoints.ts  components.ts  index.ts  palette.ts  typography.ts
